[package]
name = "compute-float"
version = "0.0.1"
description = "Compute float value using Eisel-Lemire algolithm."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/compute-float"
keywords = ["eisel-lemire", "float", "compute"]
categories = ["algorithms"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]
