[package]
name = "compute-float"
version = "0.1.0"
description = "Computes floating point numbers using Eisel-Lemire algolithm."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/compute-float"
keywords = ["eisel-lemire", "float"]
categories = ["algorithms", "no-std"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]
